may 1st , created contact part

--- a/SE MS2/hompage.html
+++ b/SE MS2/hompage.html
@@ -10,7 +10,7 @@
       <section class="header">
         <div class="header-div">
           <div class="logo">
-            <img src="media\logo.png" alt="" class="logo-img" />
+            <img src="media\logo2.png" alt="" class="logo-img" />
           </div>
           <div class="btns-div">
             <div class="about-btn"><a href="#about">About</a></div>
@@ -52,6 +52,46 @@
     </div>
     <section id="about"></section>
     <section id="activities"></section>
-    <section id="contact"></section>
+    <section id="contact">
+      <div class="white-part"></div>
+      <div class="purple-part"></div>
+      <div class="contact-box">
+        <div class="contact-title">Contact Us</div>
+        <div class="form-container">
+          <form action="" class="form">
+            Name
+            <input
+              type="text"
+              class="contact-name"
+              placeholder="Name"
+              required
+            />
+            Email Address
+            <input
+              type="email"
+              class="contact-email"
+              placeholder="Email"
+              required
+            />
+            Phone Number
+            <input
+              type="text"
+              class="contact-phone"
+              placeholder="Phone number"
+            />
+            Message
+            <textarea
+              name="message"
+              class="contact-message"
+              rows="4"
+              placeholder=""
+            ></textarea>
+            <div class="send-button-div">
+              <button class="send-button">Send</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
