--- a/SE MS2/Location.html
+++ b/SE MS2/Location.html
@@ -3,7 +3,7 @@
     <head>
        
         <title>Heavenly</title>
-        <link rel="stylesheet" type="text/css" href="styles/organization.css" />
+        <link rel="stylesheet" type="text/css" href="styles/location.css" />
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
