donor all done except for filter

--- a/help/help.html
+++ b/help/help.html
@@ -29,15 +29,11 @@
           </div>
           <button class="donate-button">Donate</button>
           <div class="donate-modal" id="donateModal-${post.id}" class="modal">
-          <div class="donate-modal-content">
-          <label for="quantity">Quantity:</label>
-          <select name="quantity" id="quantity">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <!-- Add more options as needed -->
-          </select>
-          <button class = "confirm-button" type="submit">Confirm Donation</button>
+            <div class="donate-modal-content">
+              Thank You for your Donation!
+              <button class = "continue">continue</button>
+            </div>
+            
         </div>
       </div>
       </div>
