--- a/SE MS2/Donor/donor.html
+++ b/SE MS2/Donor/donor.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Heavenly</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       type="text/css"
