post,logout 100%, issue with posts.js, view details volunteer&notification not functional
post now is 100% ready, issue with importing of the posts.js, logout now works as well, view details of notification and volunteers still not functional

--- a/SE MS2/Organization/organizationMain.html
+++ b/SE MS2/Organization/organizationMain.html
@@ -68,6 +68,7 @@
         <div class="org">
             <img src="../media/donor.png" onerror="applyDefaultStyle(this)">
             Abdelrahman Mokhtar
+            <img src="../media/log-out icon.png" id="logout">
         </div>
     </div>
     <div class="posts" id="postsarea">
@@ -97,6 +98,11 @@
         <textarea placeholder="Enter hospital area" id="hospitalArea" style="display: none;"></textarea>
         <textarea placeholder="Enter hospital goverorate" id="hospitalGov" style="display: none;"></textarea>
         <textarea placeholder="Enter hospital address" id="hospitalAdd" style="display: none;"></textarea>
+        <textarea placeholder="Enter author name" id="author" style="display: none;"></textarea>
+        <textarea placeholder="Enter language" id="language" style="display: none;"></textarea>
+        <textarea placeholder="Enter edition" id="edition" style="display: none;"></textarea>
+        <textarea placeholder="Enter summary" id="summary" style="display: none;"></textarea>
+        <textarea placeholder="Enter color" id="color" style="display: none;"></textarea>
 
         <select id="gender" class=".post-window" style="display: none;">
             <option value="" disabled selected>Gender</option>
