--- a/SE MS2/Organization/organizationMain.html
+++ b/SE MS2/Organization/organizationMain.html
@@ -40,33 +40,33 @@
     <div class="volunteers-list">
         Volunteers
         <div class="volunteer">
-            <img src="../media/donor.png" onerror="applyDefaultStyle(this)">
+            <img src="../media/donor.png">
             Mostafa Ashraf
         </div>
         <div class="volunteer">
-            <img src="../media/volunteer.png" onerror="applyDefaultStyle(this)">
+            <img src="../media/man.png">
             Mohammed Sweidan
         </div>
         <div class="volunteer">
-            <img src="../media/donor.png" onerror="applyDefaultStyle(this)">
+            <img src="../media/donor.png">
             Ali Maghawry
         </div>
         <div class="volunteer">
-            <img src="../media/volunteer.png" onerror="applyDefaultStyle(this)">
+            <img src="../media/man.png">
             Ahmed Safwat
         </div>
         <div class="volunteer">
-            <img src="../media/donor.png" onerror="applyDefaultStyle(this)">
+            <img src="../media/donor.png">
             Abdelrahman Mokhtar
         </div>
         <div class="volunteer">
-            <img src="../media/volunteer.png" onerror="applyDefaultStyle(this)">
+            <img src="../media/man.png">
             Farah Hisham
         </div>
     </div>
     <div class="organization-details">
         <div class="org">
-            <img src="../media/donor.png" onerror="applyDefaultStyle(this)">
+            <img src="../media/donor.png">
             Abdelrahman Mokhtar
             <img src="../media/log-out icon.png" id="logout">
         </div>
