--- a/SE MS2/donorUI/volunteer.html
+++ b/SE MS2/donorUI/volunteer.html
@@ -14,7 +14,7 @@
     </div>
     <div class="right-part">
         <img src="../media/doctora.png" class="doctor-img"/>
-        <button class="doctor-button"> Doctor</button>
+        <a href="doctor.html"><button class="doctor-button"> Doctor</button></a>
     </div>
     <div class="textbox-container">
         <input type="text" class="textbox" value="Volunteer As" readonly>
