--- a/SE MS2/hompage.html
+++ b/SE MS2/hompage.html
@@ -19,7 +19,7 @@
           </div>
           <div class="login-div">
             <div class="login-btn">
-              <a class="login-btn-a" href="">Login</a>
+              <a class="login-btn-a" href="login.html">Login</a>
             </div>
             <div class="admin-login">
               <button class="admin-btn-a">Admin Login</button>
@@ -53,19 +53,43 @@
     <section id="about">
       <div class="middle-part">
         <div class="dotted-middle">
-          <img src="media/donators.jpg" class="donators-img"/>
-          <img src="media/2.jpg" class="food-img"/>
-          <img src="media/teaching.jpg" class="teaching-img"/>
+          <img src="media/donators.jpg" class="donators-img" />
+          <img src="media/2.jpg" class="food-img" />
+          <img src="media/teaching.jpg" class="teaching-img" />
         </div>
-        <div class="info-text"> <div class="title-abt">Get To Know Us!</div>
-        <div class="description"><h2>Welcome to Heavenly,where compassion meets action. </h2>
-          <h3>Our NGO is dedicated to making a meaningful impact on the lives of communities in need. With a focus on healthcare and education, we strive to create sustainable change that empowers individuals and transforms futures.</h3>
+        <div class="info-text">
+          <div class="title-abt">Get To Know Us!</div>
+          <div class="description">
+            <h2>Welcome to Heavenly,where compassion meets action.</h2>
+            <h3>
+              Our NGO is dedicated to making a meaningful impact on the lives of
+              communities in need. With a focus on healthcare and education, we
+              strive to create sustainable change that empowers individuals and
+              transforms futures.
+            </h3>
 
-          <h5>As a volunteer with us, you have the opportunity to make a direct and lasting difference in the lives of others. Whether you're a doctor looking to lend your expertise in underserved areas or a teacher passionate about shaping young minds, we welcome you to join our team and contribute your skills towards a greater cause.</h5>
-          
-          <h5>In addition to volunteering your time and expertise, you can also support our mission through donations. Your contributions help us to expand our reach, provide essential resources, and implement impactful projects that improve the well-being and prospects of those we serve.</h5>
-          
-          <h5>Join us in our journey to create a world where every individual has access to quality healthcare and education, regardless of their circumstances. Together, we can build a brighter future for all.</h5>
+            <h5>
+              As a volunteer with us, you have the opportunity to make a direct
+              and lasting difference in the lives of others. Whether you're a
+              doctor looking to lend your expertise in underserved areas or a
+              teacher passionate about shaping young minds, we welcome you to
+              join our team and contribute your skills towards a greater cause.
+            </h5>
+
+            <h5>
+              In addition to volunteering your time and expertise, you can also
+              support our mission through donations. Your contributions help us
+              to expand our reach, provide essential resources, and implement
+              impactful projects that improve the well-being and prospects of
+              those we serve.
+            </h5>
+
+            <h5>
+              Join us in our journey to create a world where every individual
+              has access to quality healthcare and education, regardless of
+              their circumstances. Together, we can build a brighter future for
+              all.
+            </h5>
           </div>
         </div>
       </div>
