--- a/SE MS2/Donor/donor.html
+++ b/SE MS2/Donor/donor.html
@@ -63,16 +63,16 @@
             <div class="cat-name">Age</div>
             <div class="cat-options">
               <div class="option-row">
-                <input type="checkbox" name="checkbox" />
-                <label for="checkbox">0-15</label>
+                <input type="radio" name="age" id="age-0-15" value="0-15" />
+                <label for="age-0-15">0-15</label>
               </div>
               <div class="option-row">
-                <input type="checkbox" name="checkbox" />
-                <label for="checkbox">16-25</label>
+                <input type="radio" name="age" id="age-16-25" value="16-25" />
+                <label for="age-16-25">16-25</label>
               </div>
               <div class="option-row">
-                <input type="checkbox" name="checkbox" />
-                <label for="checkbox">25+</label>
+                <input type="radio" name="age" id="age-25plus" value="25+" />
+                <label for="age-25plus">25+</label>
               </div>
             </div>
           </div>
@@ -80,25 +80,46 @@
             <div class="cat-name">Gender</div>
             <div class="cat-options">
               <div class="option-row">
-                <input type="checkbox" name="checkbox" />
-                <label for="checkbox">Male</label>
+                <input
+                  type="radio"
+                  name="gender"
+                  id="male-radio"
+                  value="Male"
+                />
+                <label for="male-radio">Male</label>
               </div>
               <div class="option-row">
-                <input type="checkbox" name="checkbox" />
-                <label for="checkbox">Female</label>
+                <input
+                  type="radio"
+                  name="gender"
+                  id="female-radio"
+                  value="Female"
+                />
+                <label for="female-radio">Female</label>
               </div>
             </div>
           </div>
+
           <div class="cat3">
             <div class="cat-name">Season</div>
             <div class="cat-options">
               <div class="option-row">
-                <input type="checkbox" name="checkbox" />
-                <label for="checkbox">Summer</label>
+                <input
+                  type="radio"
+                  name="season"
+                  id="summer-radio"
+                  value="Summer"
+                />
+                <label for="summer-radio">Summer</label>
               </div>
               <div class="option-row">
-                <input type="checkbox" name="checkbox" />
-                <label for="checkbox">Winter</label>
+                <input
+                  type="radio"
+                  name="season"
+                  id="winter-radio"
+                  value="Winter"
+                />
+                <label for="winter-radio">Winter</label>
               </div>
             </div>
           </div>
