--- a/SE MS2/login.html
+++ b/SE MS2/login.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="middle-div">
+      <a href="./hompage.html"><button class="back-button">Back</button></a>
       <div class="login-div">
         <div class="title">Heavenly</div>
         <div class="form-div">
