--- a/SE MS2/Donor/donorOrg.html
+++ b/SE MS2/Donor/donorOrg.html
@@ -16,10 +16,12 @@
       <div class="working">
         <div class="titles-div">
           <div class="logo-div">
-            <a href="../Donor/donor.html"><button class="back-button">Back</button></a>
+            <a href="../Donor/donor.html"
+              ><button class="back-button">Back</button></a
+            >
             <img src="../media/logo2.png" alt="" class="logo-img" />
           </div>
-          <div class="title-div">Donations</div>
+          <div class="title-div">Organizations</div>
           <div class="account-div">
             <button class="account-button">N</button>
             <div class="options-box">
