--- a/SE MS2/Donor/donor.html
+++ b/SE MS2/Donor/donor.html
@@ -15,12 +15,13 @@
       <div class="working">
         <div class="titles-div">
           <div class="logo-div">
+            <a href="../donorUI/donorhome.html"><button class="back-button">Back</button></a>
             <img src="../media/logo2.png" alt="" class="logo-img" />
           </div>
           <div class="title-div">Donations</div>
           <div class="account-div">
-            <label for="">Organizations</label>
-            <label for="">Delivery</label>
+           <a href="../Donor/donorOrg.html"> <label for="">Organizations</label></a>
+            <a href="../Donor/donorDelivery.html"><label for="">Delivery</label></a>
             <button class="account-button">N</button>
             <div class="options-box">
               <a class="acc-button">Account</a>
