--- a/SE MS2/Donor/donorOrg.html
+++ b/SE MS2/Donor/donorOrg.html
@@ -16,6 +16,7 @@
       <div class="working">
         <div class="titles-div">
           <div class="logo-div">
+            <a href="../Donor/donor.html"><button class="back-button">Back</button></a>
             <img src="../media/logo2.png" alt="" class="logo-img" />
           </div>
           <div class="title-div">Donations</div>
@@ -87,6 +88,6 @@
         <div class="posts-part-div"></div>
       </div>
     </div>
-    <script type="module" src="donorDelv.js"></script>
+    <script type="module" src="../Donor/donorOrg.js"></script>
   </body>
 </html>
