--- a/SE MS2/Organization/organizationMain.html
+++ b/SE MS2/Organization/organizationMain.html
@@ -12,6 +12,8 @@
   <body>
     <div class="left-part">
       <div class="logo">
+        <a href="../hompage.html"><button class="back-button">Back</button></a>
+
         <img src="../media/logo2.png" alt="Logo" />
       </div>
       <div class="button-list">
