--- a/SE MS2/adminNew.html
+++ b/SE MS2/adminNew.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="left-part">
-        <div class="logo-div">  <img src="../SE MS2/media/logo2.png" alt="" class="logo-img" /></div>
+        <div class="logo-div"> 
+          <a href="../SE MS2/hompage.html"><button class="back-button">Back</button></a>
+           <img src="../SE MS2/media/logo2.png" alt="" class="logo-img" /></div>
         <div class="cats-div"> 
             <div class="button-list">
               <div class="button-row">
