--- a/SE MS2/donorUI/donorhome.html
+++ b/SE MS2/donorUI/donorhome.html
@@ -12,13 +12,14 @@
     <section class="header">
       <div class="purple-part">
         <div class="logo-div">
+          
           <img class="logo-img" src="../media/logo2.png" alt="logo" />
         </div>
 
-        <div class="welcomeTitle">Welcome, farouha.</div>
+        <div class="welcomeTitle">Welcome.</div>
 
         <div class="back-div">
-          <button class="back-button">Back to HomePage</button>
+         <a href="../hompage.html"> <button class="back-button">Back to HomePage</button></a>
         </div>
       </div>
     </section>
