--- a/SE MS2/hompage.html
+++ b/SE MS2/hompage.html
@@ -14,7 +14,7 @@
           </div>
           <div class="btns-div">
             <div class="about-btn"><a href="#about">About</a></div>
-            <div class="projects-btn"><a href="#activities">Activities</a></div>
+           
             <div class="contact-btn"><a href="#contact">Contact</a></div>
           </div>
           <div class="login-div">
@@ -22,7 +22,7 @@
               <a class="login-btn-a" href="login.html">Login</a>
             </div>
             <div class="admin-login">
-              <button class="admin-btn-a">Admin Login</button>
+             <a href="../SE MS2/adminLogin.html"> <button class="admin-btn-a">Admin Login</button></a>
             </div>
           </div>
         </div>
@@ -41,7 +41,7 @@
               </div>
             </div>
             <div class="sign-up-div">
-              <button class="sign-up-button">Sign Up</button>
+             <a href="../SE MS2/signup.html" class="sign-up-button">Sign Up</a>
             </div>
           </div>
         </div>
@@ -94,7 +94,7 @@
         </div>
       </div>
     </section>
-    <section id="activities"></section>
+    
     <section id="contact">
       <div class="white-part"></div>
       <div class="purple-part"></div>
